--- a/supervisor.ini
+++ b/supervisor.ini
@@ -1,6 +1,12 @@
 [inet_http_server]
 port = :9001
 
-[program:rig]
-directory = /Users/bingoobjca/GitHub/rig
-command = ./rig -u -o=false
+[supervisord]
+procFile = /tmp/proc.json
+loglevel= trace
+logfile=/dev/stdout
+
+[program:mytest]
+directory = /root/
+command = nc -l 8090
+
